syntax = "proto3";

message reportdata {
    string lat = 1;
    string lon = 2;
    string vin = 3;
    uint32 speed = 4;
    uint32 odometer = 5;
    uint32 throttle_position = 6;
    uint32 fuel_level = 7;
    uint32 ambient_air_temperature = 8;
    uint32 fuel_type = 9;
    uint32 engine_oil_temperature = 10;
    uint32 fuel_rate = 11;
    uint32 fault_codes = 12;
}